--- a/plants/style.css
+++ b/plants/style.css
@@ -244,7 +244,7 @@ header img {
     background-color: #F5F5F5;
     padding-bottom: 91px;
 }
-.service_header {
+.service__header {
      color: #F5F5F5;
 }
 
