--- a/plants/style.css
+++ b/plants/style.css
@@ -204,7 +204,7 @@ header img {
 
 .service_text {
     display: flex;
-    margin: 120px auto auto 109px;
+    margin: 90px auto auto 109px;
 }
 
 .service_types {
@@ -236,6 +236,7 @@ header img {
 
 .service_images {
     display: flex;
+    margin-top: 6px;
     flex-wrap: wrap;
     list-style-type: none;
 }
@@ -244,8 +245,13 @@ header img {
     background-color: #F5F5F5;
     padding-bottom: 91px;
 }
+
 .service__header {
-     color: #F5F5F5;
+    margin-top: 40px;
+    font-family: Inika;
+    font-size: 40px;
+    font-weight: 400;
+    color: #499A18;
 }
 
 .service_image {
