--- a/plants/style.css
+++ b/plants/style.css
@@ -474,3 +474,22 @@ header img {
 .schools_communitiers_item {
     margin-left: 29px;
 }
+a:hover {
+    color: #E06733;
+}
+
+button:hover {
+    background-color: #E06733;
+}
+a:hover {
+    color: #E06733;
+}
+
+button:hover {
+    background-color: #E06733;
+}
+.github {
+    text-decoration: none;
+    color: #000000;
+    margin-top: 20px;
+}
