--- a/style.css
+++ b/style.css
@@ -455,23 +455,9 @@ header img {
 .schools_communitiers {
     margin-top: 50px;
     margin-right: 110px;
+    list-style-type: none;
 }
 
 .schools_communitiers_item {
     margin-left: 29px;
 }
-Footer
-© 2023 GitHub, Inc.
-Footer navigation
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
-Blog
-About
-Plants/style.css at gh-pages · ZagarovaGS/Plants
