--- a/plants/plants/style.css
+++ b/plants/plants/style.css
@@ -946,7 +946,7 @@ button:hover {
     .burger_menu {
         display: block;
         margin-top: 37px;
-        margin-left: 57.5%;
+        margin-right: 8.5%;
     }
 
     .welcome {
