--- a/plants/plants/style.css
+++ b/plants/plants/style.css
@@ -1284,6 +1284,8 @@ button:hover {
     .mobile_items {
         margin-top: 20px;
         margin-bottom: 5px;
+        margin-left: -22%;
+        list-style-type: none;
     }
 
     .nav_link:hover {
