--- a/plants/plants/plants3/style.css
+++ b/plants/plants/plants3/style.css
@@ -455,8 +455,9 @@ button:hover {
 
 .price_order_button {
     display: inline;
+    display: inline;
     margin-left: 38px;
-    margin-top: 7px;
+    top: 7px;
     border-radius: 10px;
     font-size: 14px;
     font-weight: bold;
